@@ -1,7 +1,8 @@
 package util;
 
-import javafx.collections.FXCollections;
+import javafx.collections.ObservableList;
 import javafx.scene.control.Alert;
+import javafx.scene.control.DialogPane;
 import javafx.scene.control.ButtonType;
 import javafx.scene.control.Dialog;
 import javafx.stage.Window;
@@ -9,6 +10,7 @@ import org.junit.jupiter.api.Test;
 import org.mockito.MockedConstruction;
 
 import java.util.Optional;
+import java.util.concurrent.atomic.AtomicReference;
 
 import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.Mockito.*;
@@ -16,14 +18,31 @@ import static org.mockito.Mockito.*;
 class AlertUtilTest {
 
     @Test
-    void showAlertWithoutOwnerSetsValuesAndShows() {
-        try (MockedConstruction<Alert> mocked = mockConstruction(Alert.class, (alert, context) ->
-                             when(alert.showAndWait()).thenReturn(Optional.empty()))) {
+    void showAlertWithoutOwnerCreatesAlertAndShows() {
+        /*Keep the MockedConstruction reference ("mocked") so the try-with-resources
+        lifecycle is applied (it activates the constructor interception and closes it
+        when the block exits). The variable also allows inspecting created mocks via
+        mocked.constructed() when needed.*/
+        try (MockedConstruction<Alert> mocked =
+                     mockConstruction(Alert.class, (alert, ctx) -> {
+                         // Provide a DialogPane and a modifiable button list to avoid NPEs when AlertUtil manipulates the dialog pane/button types.
+                          DialogPane pane = mock(DialogPane.class);
+                          when(alert.getDialogPane()).thenReturn(pane);
+                          @SuppressWarnings("unchecked")
+                          ObservableList<ButtonType> btnList = mock(ObservableList.class);
+                          when(pane.getButtonTypes()).thenReturn(btnList);
+                          when(alert.getButtonTypes()).thenReturn(btnList);
+                          when(alert.showAndWait()).thenReturn(Optional.empty());
+                     })) {
+
             Window owner = mock(Window.class);
 
-            AlertUtil.showAlert(owner, Alert.AlertType.INFORMATION, "Title", "Content");
+            AlertUtil.showAlert(owner,
+                    Alert.AlertType.INFORMATION,
+                    "Title",
+                    "Content");
 
-            Alert alert = mocked.constructed().getFirst();
+            Alert alert = mocked.constructed().get(0);
 
             verify(alert).setTitle("Title");
             verify(alert).setContentText("Content");
@@ -35,9 +54,18 @@ class AlertUtilTest {
 
     @Test
     void showAlertWithNullOwnerDoesNotInitOwner() {
+        // Keep the MockedConstruction reference ("mocked") so the try-with-resources
+        // lifecycle is applied and to allow inspection via mocked.constructed().
         try (MockedConstruction<Alert> mocked =
-                     mockConstruction(Alert.class, (alert, context) ->
-                             when(alert.showAndWait()).thenReturn(Optional.empty()))) {
+                     mockConstruction(Alert.class, (alert, ctx) -> {
+                          DialogPane pane = mock(DialogPane.class);
+                          when(alert.getDialogPane()).thenReturn(pane);
+                          @SuppressWarnings("unchecked")
+                          ObservableList<ButtonType> btnList = mock(ObservableList.class);
+                          when(pane.getButtonTypes()).thenReturn(btnList);
+                          when(alert.getButtonTypes()).thenReturn(btnList);
+                          when(alert.showAndWait()).thenReturn(Optional.empty());
+                      })) {
 
             AlertUtil.showAlert(null, Alert.AlertType.ERROR, "Error", "Something went wrong");
 
@@ -49,9 +77,19 @@ class AlertUtilTest {
     }
 
     @Test
-    void showInfoCallsShowAlert() {
-        try (MockedConstruction<Alert> mocked = mockConstruction(Alert.class, (alert, context) ->
-                         when(alert.showAndWait()).thenReturn(Optional.empty()))) {
+    void showInfoDelegatesToShowAlert() {
+        // Keep the MockedConstruction reference ("mocked") so the try-with-resources
+        // lifecycle is applied and to allow inspection via mocked.constructed().
+        try (MockedConstruction<Alert> mocked =
+                     mockConstruction(Alert.class, (alert, ctx) -> {
+                          DialogPane pane = mock(DialogPane.class);
+                          when(alert.getDialogPane()).thenReturn(pane);
+                          @SuppressWarnings("unchecked")
+                          ObservableList<ButtonType> btnList = mock(ObservableList.class);
+                          when(pane.getButtonTypes()).thenReturn(btnList);
+                          when(alert.getButtonTypes()).thenReturn(btnList);
+                          when(alert.showAndWait()).thenReturn(Optional.empty());
+                     })) {
 
             AlertUtil.showInfo(null, "Info message");
 
@@ -62,9 +100,19 @@ class AlertUtilTest {
     }
 
     @Test
-    void showWarningCallsShowAlert() {
-        try (MockedConstruction<Alert> mocked = mockConstruction(Alert.class, (alert, context) ->
-                         when(alert.showAndWait()).thenReturn(Optional.empty()))) {
+    void showWarningDelegatesToShowAlert() {
+        // Keep the MockedConstruction reference ("mocked") so the try-with-resources
+        // lifecycle is applied and to allow inspection via mocked.constructed().
+        try (MockedConstruction<Alert> mocked =
+                     mockConstruction(Alert.class, (alert, ctx) -> {
+                          DialogPane pane = mock(DialogPane.class);
+                          when(alert.getDialogPane()).thenReturn(pane);
+                          @SuppressWarnings("unchecked")
+                          ObservableList<ButtonType> btnList = mock(ObservableList.class);
+                          when(pane.getButtonTypes()).thenReturn(btnList);
+                          when(alert.getButtonTypes()).thenReturn(btnList);
+                          when(alert.showAndWait()).thenReturn(Optional.empty());
+                      })) {
 
             AlertUtil.showWarning(null, "Warning message");
 
@@ -75,9 +123,19 @@ class AlertUtilTest {
     }
 
     @Test
-    void showErrorCallsShowAlert() {
-        try (MockedConstruction<Alert> mocked = mockConstruction(Alert.class, (alert, context) ->
-                         when(alert.showAndWait()).thenReturn(Optional.empty()))) {
+    void showErrorDelegatesToShowAlert() {
+        // Keep the MockedConstruction reference ("mocked") so the try-with-resources
+        // lifecycle is applied and to allow inspection via mocked.constructed().
+        try (MockedConstruction<Alert> mocked =
+                     mockConstruction(Alert.class, (alert, ctx) -> {
+                          DialogPane pane = mock(DialogPane.class);
+                          when(alert.getDialogPane()).thenReturn(pane);
+                          @SuppressWarnings("unchecked")
+                          ObservableList<ButtonType> btnList = mock(ObservableList.class);
+                          when(pane.getButtonTypes()).thenReturn(btnList);
+                          when(alert.getButtonTypes()).thenReturn(btnList);
+                          when(alert.showAndWait()).thenReturn(Optional.empty());
+                      })) {
 
             AlertUtil.showError(null, "Error message");
 
@@ -88,14 +146,59 @@ class AlertUtilTest {
     }
 
     @Test
-    void showConfirmationReturnsFalseWhenCancelled() {
+    void showConfirmationReturnsTrueWhenOkSelected() {
+        // Keep the MockedConstruction reference ("mocked") so the try-with-resources
+        // lifecycle is applied and to allow inspection via mocked.constructed().
+        try (MockedConstruction<Alert> mocked =
+                     mockConstruction(Alert.class, (alert, ctx) -> {
+                          DialogPane pane = mock(DialogPane.class);
+                          when(alert.getDialogPane()).thenReturn(pane);
 
-        ButtonType cancel = mock(ButtonType.class);
+                          @SuppressWarnings("unchecked")
+                          ObservableList<ButtonType> list = mock(ObservableList.class);
 
-        try (MockedConstruction<Alert> mocked = mockConstruction(Alert.class, (alert, context) -> {
-            when(alert.getButtonTypes()).thenReturn(FXCollections.observableArrayList());
+                          when(pane.getButtonTypes()).thenReturn(list);
+                          when(alert.getButtonTypes()).thenReturn(list);
 
-            when(alert.showAndWait()).thenReturn(Optional.of(cancel));})) {
+                          // Capture the ok button that AlertUtil places into the button types so we can
+                          // return the exact same instance from showAndWait() (comparison is by reference).
+                          AtomicReference<ButtonType> captured = new AtomicReference<>();
+                          doAnswer(inv -> {
+                              Object[] args = inv.getArguments();
+                              if (args != null && args.length > 0 && args[0] instanceof ButtonType) {
+                                  captured.set((ButtonType) args[0]);
+                              }
+                              return null;
+                          }).when(list).setAll(any(), any());
+
+                          when(alert.showAndWait()).thenAnswer(inv -> Optional.ofNullable(captured.get()));
+                      })) {
+
+            boolean result = AlertUtil.showConfirmation(null, "Confirm", "Are you sure?"
+            );
+
+            assertTrue(result);
+        }
+    }
+
+    @Test
+    void showConfirmationReturnsFalseWhenNotOk() {
+        ButtonType other = mock(ButtonType.class);
+
+        // Keep the MockedConstruction reference ("mocked") so the try-with-resources
+        // lifecycle is applied and to allow inspection via mocked.constructed().
+        try (MockedConstruction<Alert> mocked =
+                     mockConstruction(Alert.class, (alert, ctx) -> {
+                          DialogPane pane = mock(DialogPane.class);
+                          when(alert.getDialogPane()).thenReturn(pane);
+
+                         @SuppressWarnings("unchecked")
+                         ObservableList<ButtonType> list = mock(ObservableList.class);
+                         when(pane.getButtonTypes()).thenReturn(list);
+                         when(alert.getButtonTypes()).thenReturn(list);
+                         when(alert.showAndWait()).thenReturn(Optional.of(other));
+                     })) {
+
             boolean result = AlertUtil.showConfirmation(null, "Confirm", "Are you sure?"
             );
 
@@ -104,12 +207,78 @@ class AlertUtilTest {
     }
 
     @Test
-    void addStandardButtonsSetsOkAndCancel() {
-
-        Dialog<ButtonType> dialog = mock(Dialog.class, RETURNS_DEEP_STUBS);
+    void addStandardButtonsConfiguresDialog() {
+        Dialog<?> dialog = mock(Dialog.class, RETURNS_DEEP_STUBS);
 
         AlertUtil.addStandardButtons(dialog);
 
-        verify(dialog.getDialogPane().getButtonTypes(), atLeastOnce()).setAll(any(), any());
+        verify(dialog.getDialogPane().getButtonTypes())
+                .setAll(any(), any());
+    }
+
+    @Test
+    void setOkOnlyUsedInternallyViaShowAlert() {
+        try (MockedConstruction<Alert> mocked =
+                     mockConstruction(Alert.class, (alert, ctx) -> {
+                          DialogPane pane = mock(DialogPane.class);
+                          when(alert.getDialogPane()).thenReturn(pane);
+                          @SuppressWarnings("unchecked")
+                          ObservableList<ButtonType> btnList = mock(ObservableList.class);
+                          when(pane.getButtonTypes()).thenReturn(btnList);
+                          when(alert.getButtonTypes()).thenReturn(btnList);
+                          when(alert.showAndWait()).thenReturn(Optional.empty());
+                     })) {
+
+            AlertUtil.showInfo(null, "Test");
+
+            Alert alert = mocked.constructed().get(0);
+
+            // verifies OK-only behavior indirectly
+            verify(alert.getButtonTypes()).setAll(any(ButtonType.class));
+        }
+    }
+
+    @Test
+    void showAboutDisplaysAboutDialog() {
+        try (MockedConstruction<Alert> mocked =
+                     mockConstruction(Alert.class, (alert, ctx) -> {
+                         DialogPane pane = mock(DialogPane.class);
+                         when(alert.getDialogPane()).thenReturn(pane);
+                         @SuppressWarnings("unchecked")
+                         ObservableList<ButtonType> btnList = mock(ObservableList.class);
+                         when(pane.getButtonTypes()).thenReturn(btnList);
+                         when(alert.getButtonTypes()).thenReturn(btnList);
+                         when(alert.showAndWait()).thenReturn(Optional.empty());
+                     })) {
+
+            Window owner = mock(Window.class);
+            AlertUtil.showAbout(owner);
+
+            Alert alert = mocked.constructed().get(0);
+
+            verify(alert).initOwner(owner);
+            verify(alert).showAndWait();
+        }
+    }
+
+    @Test
+    void showAboutWithNullOwnerDoesNotInitOwner() {
+        try (MockedConstruction<Alert> mocked =
+                     mockConstruction(Alert.class, (alert, ctx) -> {
+                         DialogPane pane = mock(DialogPane.class);
+                         when(alert.getDialogPane()).thenReturn(pane);
+                         @SuppressWarnings("unchecked")
+                         ObservableList<ButtonType> btnList = mock(ObservableList.class);
+                         when(pane.getButtonTypes()).thenReturn(btnList);
+                         when(alert.getButtonTypes()).thenReturn(btnList);
+                         when(alert.showAndWait()).thenReturn(Optional.empty());
+                     })) {
+
+            AlertUtil.showAbout(null);
+
+            Alert alert = mocked.constructed().get(0);
+            verify(alert, never()).initOwner(any());
+            verify(alert).showAndWait();
+        }
     }
 }
